# skill-web-browser

./: LICENSE  README.md  UPDATE.md  pyproject.toml  skill.yaml
src/skill_web_browser/: __init__.py  main.py
tests/: test_execute.py  test_skill_manifest_exists.py
