[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-web-browser"
version = "0.1.0"
description = "External web browser skill bridge"
requires-python = ">=3.11"
# Depends on BrowserToolAdapter and contracts from the core ecosystem repo.
# Core must be on sys.path (injected by JARVIS / AUTOBOT_CORE_REPO loader).
dependencies = [] # runtime: ecosystem (injected by loader)

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
